--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -15,13 +15,18 @@
   </head>
   <body>
     <form>
-      <label for="User">Usuario</label>
-      <input type="text" name="User" id="User" />
-      <label for="Password">Contraseña</label>
-      <input type="password" name="Password" id="Password" />
+      <label for="User">User</label>
+      <input type="text" name="User" id="User" placeholder="Juan12" />
+      <label for="Password">Password</label>
+      <input
+        type="password"
+        name="Password"
+        id="Password"
+        placeholder="●●●●●"
+      />
       <div>
         <input type="checkbox" name="Recordar" id="Remember" />
-        <label for="Remember">Recordar</label>
+        <label for="Remember">Remember me</label>
       </div>
       <input type="submit" value="LogIn" />
     </form>
