--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Login</title>
   </head>
   <body>
+    <img src="./assets/Group 3.png" />
     <form>
       <label for="User">User</label>
       <input type="text" name="User" id="User" placeholder="Juan12" />
