--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <img src="./assets/Group 3.png" />
+    <img src="./assets/nau 1.png" />
     <form>
       <label for="User">User</label>
       <input type="text" name="User" id="User" placeholder="Juan12" />
